--- a/index.html
+++ b/index.html
@@ -13,107 +13,149 @@
 </head>
 <body>
   <header>
-  	<div class="header-wrapper">
-  		<div class="header-inner">
-  			<div class="header-logo">
-  				<a href="#"><img src="image/main_logo.svg"></a>
-  			</div>
-  			<div class="nav">
-  				<ul>
-  					<li>
-  						<a href="#">SPORTS</a>
-  						<div class="dropdown">
-						<div>
-						<ul>
-						  <li><a href="#">demo demo demo</a></li>
-						  <li><a href="#">demo demo demo</a></li>
-						  <li><a href="#">demo demo demo</a></li>
-						  <li><a href="#">demo demo demo</a></li>
-						</ul>
-						</div>
-						<div>
-						 <ul>
-						  <li><a href="#">demo demo demo</a></li>
-						  <li><a href="#">demo demo demo</a></li>
-						  <li><a href="#">demo demo demo</a></li>
-						  <li><a href="#">demo demo demo</a></li>
-						</ul>
-						</div>
-						</div>
-  					</li>
-  					<li>
-  						<a href="#">TICKETS</a>
-  					</li>
-  					<li>
-  						<a href="#">INSIDE ATHLETICS</a>
-  					</li>
-  					<li>
-  						<a href="#">BEAR FOUNDATION</a>
-  					</li>
-  					<li>
-  						<a href="#">FAN ZONE</a>
-  					</li>
-  					<li>
-  						<a href="#">BIG 12 NOW</a>
-  					</li>
-  					<li>
-  						<a href="#"><i class="fa fa-ellipsis-h"></i></a>
-  					</li>
-  					<li>
-  						<a href="#"><i class="fa fa-search"></i></a>
-  					</li>
-  				</ul>
-  			</div>
-  			<div class="right-logo">
-  				<a href="#"><img src="image/unitedfor10.png"></a>
-  			</div>
-  		</div>
-  	</div>
-  	 <!-- white header start  -->
-  	 <div class="header-two">
-  	 	<div class="white-header">
-  	 		<h3>FOOTBALL</h3>
-  	 		<ul>
-  	 			<li>
-  	 				<a href="#">Roster</a>
-  	 				<span>/</span>
-  	 			</li>
-  	 			<li>
-  	 				<a href="#">Schedule/Results</a>
-  	 				<span>/</span>
-  	 			</li>
-  	 			<li>
-  	 				<a href="#">Stats (XML)</a>
-  	 				<span>/</span>
-  	 			</li>
-  	 			<li>
-  	 				<a href="#">Stats (PDF)</a>
-  	 				<span>/</span>
-  	 			</li>
-  	 			<li>
-  	 				<a href="#">Stats (HTML)</a>
-  	 				<span>/</span>
-  	 			</li>
-  	 			<li>
-  	 				<a href="#">Stats (Archive)</a>
-  	 				<span>/</span>
-  	 			</li>
-  	 			<li>
-  	 				<a href="#">News</a>
-  	 				<span>/</span>
-  	 			</li>
-  	 			<li>
-  	 				<a href="#">Archives</a>
-  	 				<span>/</span>
-  	 			</li>
-  	 			<li>
-  	 				<a href="#">Additional Links</a>
-  	 				
-  	 			</li>
-  	 		</ul>
-  	 	</div>
-  	 </div>
-  	 <div class="Hero-banner"></div>
+    <div class="header-wrapper">
+        <div class="header-inner">
+            <div class="header-logo">
+                <a href="#"><img src="image/main_logo.svg"></a>
+            </div>
+            <div class="nav">
+                <ul>
+                    <li>
+                        <a href="#">SPORTS</a>
+                        <div class="primary-wrapper">
+                            <div class="dropdown">
+                                <div>
+                                <ul>
+                                  <li><a href="#">Student Athlete Center for Excellence</a></li>
+                                  <li><a href="#">demo demo demo</a></li>
+                                  <li><a href="#">demo demo demo</a></li>
+                                  <li><a href="#">demo demo demo</a></li>
+                                </ul>
+                                </div>
+                                <div>
+                                 <ul>
+                                  <li><a href="#">Student Athlete Center for Excellence</a></li>
+                                  <li><a href="#">demo demo demo</a></li>
+                                  <li><a href="#">demo demo demo</a></li>
+                                  <li><a href="#">demo demo demo</a></li>
+                                </ul>
+                                </div>
+                                </div>
+                          </div>
+                    </li>
+                    <li>
+                        <a href="#">TICKETS</a>
+                    </li>
+                    <li>
+                          <a href="#">INSIDE ATHLETICS</a>
+                          <div class="primary-wrapper">
+                            <div class="dropdown">
+                                <div>
+                                <ul>
+                                  <li><a href="#">Student Athlete Center for Excellence</a></li>
+                                  <li><a href="#">demo demo demo</a></li>
+                                  <li><a href="#">demo demo demo</a></li>
+                                  <li><a href="#">demo demo demo</a></li>
+                                </ul>
+                                </div>
+                                <div>
+                                 <ul>
+                                  <li><a href="#">Student Athlete Center for Excellence</a></li>
+                                  <li><a href="#">demo demo demo</a></li>
+                                  <li><a href="#">demo demo demo</a></li>
+                                  <li><a href="#">demo demo demo</a></li>
+                                </ul>
+                                </div>
+                                </div>
+                          </div>
+                    </li>
+                    <li>
+                        <a href="#">BEAR FOUNDATION</a>
+                    </li>
+                    <li>
+                          <a href="#">FAN ZONE</a>
+                          <div class="primary-wrapper">
+                            <div class="dropdown">
+                                <div>
+                                <ul>
+                                  <li><a href="#">Student Athlete Center for Excellence</a></li>
+                                  <li><a href="#">demo demo demo</a></li>
+                                  <li><a href="#">demo demo demo</a></li>
+                                  <li><a href="#">demo demo demo</a></li>
+                                </ul>
+                                </div>
+                                <div>
+                                 <ul>
+                                  <li><a href="#">Student Athlete Center for Excellence</a></li>
+                                  <li><a href="#">demo demo demo</a></li>
+                                  <li><a href="#">demo demo demo</a></li>
+                                  <li><a href="#">demo demo demo</a></li>
+                                </ul>
+                                </div>
+                                </div>
+                          </div>
+                    </li>
+                    <li>
+                        <a href="#">BIG 12 NOW</a>
+                    </li>
+                    <li>
+                        <a href="#"><i class="fa fa-ellipsis-h"></i></a>
+                    </li>
+                    <li>
+                        <a href="#"><i class="fa fa-search"></i></a>
+                    </li>
+                </ul>
+            </div>
+            <div class="right-logo">
+                <a href="#"><img src="image/unitedfor10.png"></a>
+            </div>
+        </div>
+    </div>
+     <!-- white header start  -->
+     <div class="header-two">
+        <div class="white-header">
+            <h3>FOOTBALL</h3>
+            <ul>
+                <li>
+                    <a href="#">Roster</a>
+                    <span>/</span>
+                </li>
+                <li>
+                    <a href="#">Schedule/Results</a>
+                    <span>/</span>
+                </li>
+                <li>
+                    <a href="#">Stats (XML)</a>
+                    <span>/</span>
+                </li>
+                <li>
+                    <a href="#">Stats (PDF)</a>
+                    <span>/</span>
+                </li>
+                <li>
+                    <a href="#">Stats (HTML)</a>
+                    <span>/</span>
+                </li>
+                <li>
+                    <a href="#">Stats (Archive)</a>
+                    <span>/</span>
+                </li>
+                <li>
+                    <a href="#">News</a>
+                    <span>/</span>
+                </li>
+                <li>
+                    <a href="#">Archives</a>
+                    <span>/</span>
+                </li>
+                <li>
+                    <a href="#">Additional Links</a>
+                    
+                </li>
+            </ul>
+        </div>
+     </div>
+     <div class="Hero-banner"></div>
   </header>
   <article>
   	<section class="card-image">
