--- a/index.html
+++ b/index.html
@@ -293,10 +293,25 @@
   			   </div>
   			</div>
   			
-  			<div class="sidebar-ads">
+  			<!-- <div class="sidebar-ads">
   				<img src="image/ads.jpg">
+  			</div> -->
+  		</div>
+  	</section>
+
+  	<section class="video-section">
+  		<div class="video-header">
+  			<div class="heading-left">
+  				<h3>Top Videos</h3>
+  				<div class="dew-img">
+  					<img src="image/MountainDewWeb_71.png">
+  				</div>
+  			</div>
+  			<div class="heading-right">
+  				<h3>ALL VIDEOS</h3>
   			</div>
   		</div>
+  		<iframe src="https://player.vimeo.com/video/417761699" width="1349" height="740" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
   	</section>
   	<section class="logos-container">
   		<div class="img-container">
